# polls

./: dbio.py  err.py  polls.db  server.py
bottle_server/: dbio.py  polls.db
client/: client.cabal
client/app/: Main.hs
client/src/: App.hs  Appointment.hs  CRUDApp.hs  Command.hs  Component.hs  ConnectionManager.hs  Helper.hs  Lib.hs  Network.hs  Poll.hs  PollCRUDApp.hs  RunApp.hs  Vote.hs  VoteCRUDApp.hs  Widget.hs
client/src/Poll/: CRUDApp.hs  Read.hs
client2/: client.cabal
client2/app/: Main.hs  Main.hs.bak
client2/src/: CommandLine.hs  Network.hs  VoteCRUDApp.hs  WidgetComponent.hs
