name:                client
version:             0.1.0.0
synopsis:            Implement a Webservice
description:         Please see README.md
homepage:            https://github.com/githubuser/client#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Nitz
maintainer:          nitz.stefan@googlemail.com
copyright:           2016 Stefan Nitz
category:            Webservice
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CommandLine
                     , Network
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , safe
                     , transformers
                     , HTTP
                     , network-uri
  default-language:    Haskell2010

executable client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mtl
                     , client
  default-language:    Haskell2010

test-suite client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/client
